RESOLVED FIXED65431
Fix SpacebarScrolling WebKit2 API test
https://bugs.webkit.org/show_bug.cgi?id=65431
Summary Fix SpacebarScrolling WebKit2 API test
Anders Carlsson
Reported 2011-07-31 12:48:18 PDT
Fix SpacebarScrolling WebKit2 API test
Attachments
Patch (13.69 KB, patch)
2011-07-31 12:51 PDT, Anders Carlsson
sam: review+
webkit.review.bot: commit-queue-
Anders Carlsson
Comment 1 2011-07-31 12:51:31 PDT
WebKit Review Bot
Comment 2 2011-07-31 13:46:35 PDT
Comment on attachment 102462 [details] Patch Rejecting attachment 102462 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-02', '--port..." exit_code: 1 Last 500 characters of output: 3da799148618c006cb6f0b3076e5e1bcc9a74f26 r92088 = a086548a0820ffd5805b53604006c55f43bed612 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/9288199
Anders Carlsson
Comment 3 2011-07-31 20:32:16 PDT
Note You need to log in before you can comment on or make changes to this bug.